# ___RAFTworks

./: .gitignore  create_raftworks_structure.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-ci.yml  zold_python-app.yml
backend/: main.py
backend/api/v1/: crud.py
backend/database/: db_SQLModel.py
backend/models/: sales_model.py
backend/schemas/: profiles_schema.py
frontend/streamlit/: dashboard_template.py  streamlit_app.py  ui_components.py
tests/: test_placeholder.py
z_else_for_now/: sql_windows.sql
z_else_for_now/scripts/: report_sales.py
z_else_for_now/utils/: emailer_template.py  reporting_template.py
