[tool.poetry]
name = "raftworks"
version = "0.1.0"
description = "Starship SmartBytes RAFTworks project"
authors = ["Captain Dave"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
pandas = "*"
sqlmodel = "*"
uvicorn = "*"
streamlit = "*"
openpyxl = "*"
python-dotenv = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
ruff = "*"
black = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | __pycache__
  | data
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
